# gridbear

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.fast  LICENSE  Manuale_PostInstall_Ollama_Odoo.docx  Plugins.docx  README.md  SECURITY.md  babel-plugin.cfg  babel.cfg  docker-compose.override.yml.example  docker-compose.yml  install.sh  main.py  package.json  pyproject.toml  tailwind.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml.disabled
cli/: __init__.py  __main__.py  api.py  app.py  auth.py  config.py  formatters.py  gateway.py  shell.py
config/: executor.json.example  logging_config.py  mcp_servers.json.example  settings.py
config/agents/: myagent.yaml.example  peggy.yaml.example
config/schemas/: agent.schema.json
core/: agent.py  agent_manager.py  api_schemas.py  config_migration.py  config_models.py  credential_vault.py  database.py  encryption.py  exceptions.py  hooks.py  i18n.py  mcp_token_manager.py  models_registry.py  notifications_client.py  plugin_manager.py  plugin_paths.py  registry.py  response_parser.py  system_config.py  tenant.py  tool_display.py
core/i18n/: it.po
core/interfaces/: __init__.py  channel.py  local_tools.py  mcp_provider.py  runner.py  service.py  theme.py
core/internal_api/: auth.py  server.py
core/mcp_gateway/: __init__.py  async_tasks.py  client_manager.py  models.py  provider_loader.py  server.py
core/models/: company.py  company_user.py  models.py  user.py
core/oauth2/: __init__.py  config.py  discovery.py  middleware.py  models.py  server.py
core/orm/: __init__.py  exceptions.py  fields.py  migrate.py  model.py  query.py  registry.py
core/permissions/: mcp_resolver.py
core/plugin_registry/: __init__.py  models.py  registry.py
core/rest_api/: acl.py  auth.py  router.py  serializer.py
core/runners/: __init__.py  cost_calculator.py  openai_compat.py  session_manager.py  tool_adapter.py
executor/: Dockerfile  requirements.txt
executor/app/: audit.py  auth.py  docker_client.py  main.py  schemas.py  validators.py
handlers/: attachment_handler.py
plugins/attachments/: manifest.json  service.py
plugins/cerebras/: manifest.json  runner.py
plugins/claude/: api_backend.py  config_generator.py  cost_tracker.py  manifest.json  process_pool.py  runner.py  session_manager.py  tool_adapter.py
plugins/deepseek/: manifest.json  runner.py
plugins/discord/: adapter.py  manifest.json
plugins/gemini/: cost_tracker.py  manifest.json  runner.py  session_manager.py  tool_adapter.py
plugins/github/: __init__.py  manifest.json  provider.py
plugins/gmail/: context_service.py  manifest.json  oauth_utils.py  provider.py  server.py
plugins/google-sa/: manifest.json  service.py
plugins/google-sheets/: manifest.json  provider.py
plugins/google-workspace/: context_service.py  context_tracker.py  exceptions.py  manifest.json  provider.py  server.py
plugins/groq/: manifest.json  runner.py
plugins/homeassistant/: manifest.json  (+2 more)
scheduler/: __init__.py  models.py  schedule_parser.py  task_scheduler.py
schemas/: agent.schema.json
scripts/: check_commit_msg.py  check_plugin_isolation.sh  gmail_auth.py  i18n_extract.sh  init_pg.sh  migrate_cli_auth.sh  migrate_gmail_tokens.py  setup_existing_pg.sh
services/: __init__.py
sessions/: cache.py  context_builder.py
tests/: __init__.py  conftest.py
ui/: app.py  config_manager.py  csrf.py  jinja_env.py  plugin_admin.py  plugin_helpers.py  rate_limit.py  secrets_manager.py  theme_utils.py  tts_service.py
(+345 files in other folders)
