[project]
name = "gridbear"
dynamic = ["version"]
description = "Plugin-based multi-channel AI assistant framework"
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10",
    "cachetools>=5.3.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "filelock>=3.13.0",
    # Web / Admin UI
    "fastapi>=0.131.0,<0.135.3",
    "starlette>=0.38.0,<1.0.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.6",
    # Auth & security
    "bcrypt>=4.1.0",
    "cryptography>=46.0.5",
    # PostgreSQL
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
    # MCP protocol + primary runner
    "mcp>=1.0.0",
    "anthropic>=0.34.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.0",
]
discord = [
    "discord.py>=2.3",
]
memory = [
    "sentence-transformers>=2.2.0",
]
tts = [
    "edge-tts>=6.1.0",
    "google-cloud-texttospeech>=2.14.0",
]
google = [
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "google-genai>=1.0.0",
]
ms365 = [
    "msal>=1.24.0",
]
livekit = [
    "livekit>=1.0.0",
    "livekit-agents>=1.0.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
]
remote-dev = [
    "asyncssh>=2.14.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
executor = [
    "docker>=7.0.0",
    "RestrictedPython>=7.0",
]
openai = [
    "openai>=1.60.0",
]
2fa = [
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "webauthn>=2.0.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
i18n = [
    "babel>=2.14",
]
mistral = [
    "mistral-vibe>=0.1.0",
]
data = [
    "openpyxl>=3.1.0",
]
all = [
    "gridbear[telegram,discord,memory,tts,google,ms365,livekit,remote-dev,pdf,executor,openai,2fa,cli,i18n,mistral,data]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-httpx>=0.28",
    "freezegun>=1.2",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
gridbear = "cli.app:app"

[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "core.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["cli*", "ui*", "core*", "plugins*", "handlers*", "services*", "sessions*", "scheduler*"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:telegram.*",
    "ignore::DeprecationWarning:discord.*",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false
exclude = [".venv", "build", "tests", "plugins"]
disable_error_code = [
    "union-attr",
    "attr-defined",
    "var-annotated",
    "import-untyped",
    "arg-type",
    "assignment",
    "override",
    "return-value",
    "call-arg",
]

[tool.coverage.run]
source = ["ui", "core", "plugins"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
